# prio

./: .env.example  .gitignore  AGENT.md  DEPLOYMENT_GUIDE.md  Database_Design_Last_Minute_Life_Saver.md  PRD_Last_Minute_Life_Saver.md  README.md  System_Architecture_Last_Minute_Life_Saver.md  USER_GUIDE.md  Vibe2Ship - Problem Statements & Submission Guidelines.md  package.json  pnpm-lock.yaml
apps/web/: README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
apps/web/src/: app.d.ts  hooks.server.ts
apps/web/src/routes/: +layout.svelte  +page.server.ts  layout.css
apps/web/tests/: triage-flow.spec.ts
convex/: actions.ts  mutations.ts  queries.ts  schema.ts
convex/_generated/: api.d.ts
docs/: project_overview.md
infra/: main.tf  variables.tf
proto/: genome.proto  scheduler.proto  triage.proto
services/go-gateway/: Dockerfile  go.mod  go.sum
services/go-gateway/cmd/server/: main.go
services/python-agent/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/python-agent/agents/: biometric_agent.py  genome_analyst.py  graph.py  scheduler_agent.py  state.py  triage_agent.py
services/python-agent/protos/: __init__.py  genome_pb2.py  genome_pb2_grpc.py  scheduler_pb2.py  scheduler_pb2_grpc.py  triage_pb2.py  triage_pb2_grpc.py
services/python-agent/tests/: test_biometric.py  test_genome.py  test_graph.py  test_grpc.py  test_scheduler.py
test_emails/: README.md  email_1_gmail_draft.txt  email_2_calendar_booking.txt  email_3_bill_payment.txt
(+28 files in other folders)
